# cstu-group-project

./: README.md  package.xml  setup.cfg  setup.py
config/: ros2_controllers.yaml
cstu_group_project/: __init__.py  image_processor.py  image_viewer.py  motion_controller.py
launch/: sim_launch.py
resource/: cstu_group_project
urdf/: diffbot.urdf.xacro
worlds/: city.world
